--- a/client/layouts/main/main-layout.html
+++ b/client/layouts/main/main-layout.html
@@ -4,13 +4,13 @@
             {{> top}}
         </div>
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col m2 hide-on-small-only">
                 left menu
             </div>
-            <div class="col-sm-7">
+            <div class="col s12 m7">
                 {{> Template.dynamic template=content}}
             </div>
-            <div class="col-sm-3">
+            <div class="col m3 hide-on-small-only">
                 right news
             </div>
         </div>
