--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -1,3 +1,59 @@
 <template name="createEditPublication">
-    create edit publication
+    <div class="row">
+        <form id="create-edit-publication-form">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="validate" id="title">
+                    <label for="title">{{_ "bookTitle"}}</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea rows="3" class="validate materialize-textarea"
+                              id="description"></textarea>
+                    <label for="description">{{_ "bookDescription"}}</label>
+                </div>
+            </div>
+
+            {{> addAuthor
+            addedAuthorsIds=addedAuthorsIds
+            addAuthor=onAddAuthor
+            removeAuthor=onRemoveAuthor}}
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="validate" id="year" pattern="\w{4}">
+                    <label for="year">{{_ "bookYear"}}</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="number" class="validate" id="pages-count">
+                    <label for="pages-count">{{_ "bookPagesCount"}}</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea rows="3" class="validate materialize-textarea"
+                              id="content"></textarea>
+                    <label for="content">{{_ "bookContent"}}</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="validate" id="pages-price">
+                    <label for="pages-price">{{_ "bookPrice"}}</label>
+                </div>
+            </div>
+
+            <button type="button" class="btn btn-muted cancel-button">Cancel</button>
+            <button type="submit" class="btn btn-default"
+                    disabled="{{#if hasInvalidInput}}disabled{{/if}}">Submit
+            </button>
+        </form>
+    </div>
 </template>
