possibility to edit publication

--- a/client/views/publications/edit-publication-main-view/edit-publication-main-view.html
+++ b/client/views/publications/edit-publication-main-view/edit-publication-main-view.html
@@ -1,3 +1,5 @@
 <template name="editPublicationMainView">
-    {{> createEditPublication publication=publication}}
+    {{#if publication}}
+        {{> createEditPublication publication=publication}}
+    {{/if}}
 </template>
