--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -3,16 +3,21 @@
         <form id="create-edit-publication-form">
             <div class="row">
                 <div class="input-field col s12">
-                    <input type="text" class="validate" id="title">
-                    <label for="title">{{_ "bookTitle"}}</label>
+                    <input type="text" class="validate" id="title" required
+                            value="{{publication.title}}">
+                    <label for="title" class="{{#if publication.title}}active{{/if}}">
+                        {{_ "bookTitle"}}
+                    </label>
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col s12">
                     <textarea rows="3" class="validate materialize-textarea"
-                              id="description"></textarea>
-                    <label for="description">{{_ "bookDescription"}}</label>
+                              id="description" value="{{publication.description}}"></textarea>
+                    <label for="description" class="{{#if publication.description}}active{{/if}}">
+                        {{_ "bookDescription"}}
+                    </label>
                 </div>
             </div>
 
@@ -23,30 +28,42 @@
 
             <div class="row">
                 <div class="input-field col s12">
-                    <input type="text" class="validate" id="year" pattern="\w{4}">
-                    <label for="year">{{_ "bookYear"}}</label>
+                    <input type="text" class="validate" id="year" pattern="\s*\d{4}\s*"
+                           required value="{{publication.year}}">
+                    <label for="year" class="{{#if publication.year}}active{{/if}}">
+                        {{_ "bookYear"}}
+                    </label>
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col s12">
-                    <input type="number" class="validate" id="pages-count">
-                    <label for="pages-count">{{_ "bookPagesCount"}}</label>
+                    <input type="number" class="validate" id="pages-number" min="1"
+                           required value="{{publication.pagesNumber}}">
+                    <label for="pages-number" class="{{#if publication.pagesNumber}}active{{/if}}">
+                        {{_ "bookPagesNumber"}}
+                    </label>
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col s12">
                     <textarea rows="3" class="validate materialize-textarea"
-                              id="content"></textarea>
-                    <label for="content">{{_ "bookContent"}}</label>
+                              id="content" value="{{publication.content}}"></textarea>
+                    <label for="content" class="{{#if publication.content}}active{{/if}}">
+                        {{_ "bookContent"}}
+                    </label>
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col s12">
-                    <input type="text" class="validate" id="pages-price">
-                    <label for="pages-price">{{_ "bookPrice"}}</label>
+                    <input type="text" class="validate" id="price"
+                           pattern="^\s*\d+(\.\d{2})?\s*$" required
+                           value="{{publication.price}}">
+                    <label for="price" class="{{#if publication.price}}active{{/if}}">
+                        {{_ "bookPrice"}}
+                    </label>
                 </div>
             </div>
 
