--- a/client/views/publications/common/create-edit-publication/add-author/add-author.html
+++ b/client/views/publications/common/create-edit-publication/add-author/add-author.html
@@ -9,14 +9,14 @@
             </select>
             <label for="author">{{_ "bookAuthors"}}</label>
         </div>
-    </div>
 
-    <div class="row">
         {{#each addedAuthors}}
             <div class="chip">
                 {{name}}
                 <i class="material-icons" id="{{_id}}">close</i>
             </div>
         {{/each}}
+
+        <a class="waves-effect waves-green create-new-author">{{_ "createNewAuthor"}}</a>
     </div>
 </template>
