--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -6,7 +6,7 @@
                     <input type="text" class="validate" id="title" required
                            value="{{publication.title}}">
                     <label for="title" class="{{#if publication.title}}active{{/if}}">
-                        {{_ "bookTitle"}}
+                        {{_ "Title"}}
                     </label>
                 </div>
             </div>
@@ -16,7 +16,7 @@
                     <textarea rows="3" class="validate materialize-textarea"
                               id="description" value="{{publication.description}}"></textarea>
                     <label for="description" class="{{#if publication.description}}active{{/if}}">
-                        {{_ "bookDescription"}}
+                        {{_ "Description"}}
                     </label>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                     <input type="text" class="validate" id="year" pattern="\s*\d{4}\s*"
                            required value="{{publication.year}}">
                     <label for="year" class="{{#if publication.year}}active{{/if}}">
-                        {{_ "bookYear"}}
+                        {{_ "Year"}}
                     </label>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <input type="number" class="validate" id="pages-number" min="1"
                            required value="{{publication.pagesNumber}}">
                     <label for="pages-number" class="{{#if publication.pagesNumber}}active{{/if}}">
-                        {{_ "bookPagesNumber"}}
+                        {{_ "PagesNumber"}}
                     </label>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                     <textarea rows="3" class="validate materialize-textarea"
                               id="content" value="{{publication.content}}"></textarea>
                     <label for="content" class="{{#if publication.content}}active{{/if}}">
-                        {{_ "bookContent"}}
+                        {{_ "Content"}}
                     </label>
                 </div>
             </div>
@@ -62,11 +62,41 @@
                            pattern="^\s*\d+(\.\d{2})?\s*$" required
                            value="{{publication.price}}">
                     <label for="price" class="{{#if publication.price}}active{{/if}}">
-                        {{_ "bookPrice"}}
+                        {{_ "Price"}}
                     </label>
                 </div>
             </div>
 
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="validate" id="isbn"
+                           required value="{{publication.isbn}}">
+                    <label for="isbn" class="{{#if publication.isbn}}active{{/if}}">
+                        {{_ "isbn"}}
+                    </label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="validate" id="udc"
+                           required value="{{publication.udc}}">
+                    <label for="udc" class="{{#if publication.udc}}active{{/if}}">
+                        {{_ "udc"}}
+                    </label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="validate" id="bbk"
+                           required value="{{publication.bbk}}">
+                    <label for="bbk" class="{{#if publication.bbk}}active{{/if}}">
+                        {{_ "bbk"}}
+                    </label>
+                </div>
+            </div>
+            
             <button type="submit" class="btn btn-default"
                     disabled="{{#unless allFieldsIsValid}}disabled{{/unless}}">Submit
             </button>
