--- a/client/views/publications/view-publication-main-view/view-publication-main-view.html
+++ b/client/views/publications/view-publication-main-view/view-publication-main-view.html
@@ -1,3 +1,3 @@
 <template name="viewPublicationMainView">
-    {{> viewPublication}}
+    {{> viewPublication publication=publication}}
 </template>
