Possibility to add image to publication

--- a/client/views/publications/common/authors/authors.html
+++ b/client/views/publications/common/authors/authors.html
@@ -1,5 +1,5 @@
 <template name="bookAuthorsWithLinkForFilter">
     {{#each authorsIds}}
-        <a id="{{this}}">{{authorNameById this}}</a>
+        <a id="{{this}}" class="pointer">{{authorNameById this}}</a>
     {{/each}}
 </template>
