--- a/client/views/publications/common/create-edit-publication/add-author/add-author.html
+++ b/client/views/publications/common/create-edit-publication/add-author/add-author.html
@@ -17,6 +17,8 @@
             </div>
         {{/each}}
 
-        <a class="waves-effect waves-green create-new-author">{{_ "createNewAuthor"}}</a>
+        <div class="col s12">
+            <a class="waves-effect waves-green create-new-author">{{_ "createNewAuthor"}}</a>
+        </div>
     </div>
 </template>
