--- a/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
+++ b/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
@@ -4,7 +4,8 @@
         <div class="col s9">
 
             <div class="row">
-                <p>{{> bookAuthorsWithLinkForFilter authorsIds=publication.authorsIds}} - {{publication.title}}</p>
+                <p>{{> bookAuthorsWithLinkForFilter authorsIds=publication.authorsIds}} -
+                <span class="publication-title pointer underline">{{publication.title}}</span></p>
             </div>
 
             <div class="row">
@@ -32,10 +33,10 @@
             </div>
 
             <div class="row">
-                <div class="col s3">
+                <div class="col s6">
                     <button type="button" class="btn btn-muted buy-button">{{_ "buy"}}</button>
                 </div>
-                <div class="col s5">
+                <div class="col s6">
                     <p>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</p>
                 </div>
             </div>
