--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="row">
-                <div class="col s4">
+                <div class="col s4 no-padding">
                     <p>{{_ "isbn"}} {{publication.isbn}}</p>
                 </div>
                 <div class="col s4">
