--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -39,6 +39,24 @@
                 {{/if}}
             </div>
 
+            <div class="row">
+                <div class="file-field input-field col
+                {{#if pdfDoc64}}s10{{else}}s12{{/if}}">
+                    <div class="btn">
+                        <span>{{_ "bookPdf"}}</span>
+                        <input type="file" id="pdf" accept="application/pdf">
+                    </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                    </div>
+                </div>
+                {{#if pdfDoc64}}
+                    <div class="col s2">
+                        <a href="{{pdfDoc64}}" target="_blank">PDF</a>
+                    </div>
+                {{/if}}
+            </div>
+
             {{> addAuthor
             addedAuthorsIds=addedAuthorsIds
             addAuthor=onAddAuthor
