--- a/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
+++ b/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
@@ -1,11 +1,13 @@
 <template name="publicationListItem">
-    <div class="row">
-        <div class="col s3">Image</div>
+    <div class="row list-item">
+        <div class="col s3 publication-image-wrapper">
+            <img class="publication-image" src="{{publicationImage}}">
+        </div>
         <div class="col s9">
 
             <div class="row">
                 <p>{{> bookAuthorsWithLinkForFilter authorsIds=publication.authorsIds}} -
-                <span class="publication-title pointer underline">{{publication.title}}</span></p>
+                    <span class="publication-title pointer underline">{{publication.title}}</span></p>
             </div>
 
             <div class="row">
@@ -34,7 +36,10 @@
 
             <div class="row">
                 <div class="col s6">
-                    <button type="button" class="btn btn-muted buy-button">{{_ "buy"}}</button>
+                    <a class="waves-effect waves-light btn buy-button">
+                        <i class="material-icons left">shopping_cart</i>
+                        {{_ "buy"}}
+                    </a>
                 </div>
                 <div class="col s6">
                     <p>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</p>
