--- a/client/layouts/main/main-layout.html
+++ b/client/layouts/main/main-layout.html
@@ -4,13 +4,13 @@
             {{> top}}
         </div>
         <div class="row">
-            <div class="col m2 hide-on-small-only">
+            <div class="col l2 m3 hide-on-small-only">
                 left menu
             </div>
-            <div class="col s12 m7">
+            <div class="col s12 m9 l7">
                 {{> Template.dynamic template=content}}
             </div>
-            <div class="col m3 hide-on-small-only">
+            <div class="col l3 hide-on-med-and-down">
                 right news
             </div>
         </div>
