global helpers for pfd and image urls; changes in markup for publication view...

--- a/client/views/publications/common/authors/authors.html
+++ b/client/views/publications/common/authors/authors.html
@@ -1,5 +1,5 @@
 <template name="bookAuthorsWithLinkForFilter">
     {{#each authorsIds}}
-        <a id="{{this}}" class="pointer">{{authorNameById this}}</a>
+        <a id="{{this}}" class="pointer underline-hover">{{authorNameById this}}</a>
     {{/each}}
 </template>
