--- a/client/views/publications/common/create-edit-publication/add-author/add-author.html
+++ b/client/views/publications/common/create-edit-publication/add-author/add-author.html
@@ -11,7 +11,7 @@
         </div>
 
         {{#each addedAuthors}}
-            <div class="chip">
+            <div class="chip author-chip">
                 {{name}}
                 <i class="material-icons" id="{{_id}}">close</i>
             </div>
