--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -21,6 +21,8 @@
                 </div>
             </div>
 
+            {{> typeSelect selectedType=publication.type}}
+
             <div class="row">
                 <div class="file-field input-field col
                 {{#if imageBase64}}s10{{else}}s12{{/if}}">
