load more button; something else...

--- a/client/styles/publications.less
+++ b/client/styles/publications.less
@@ -17,10 +17,10 @@
 }
 
 .author-chip {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
-/* End of edit publication */
 
+/* End of edit publication */
 
 /* Publications list */
 .publications-list-wrapper {
@@ -37,7 +37,12 @@
       }
     }
   }
+
+  .load-more-button {
+    margin-top: 20px;
+  }
 }
+
 /* End of publications list */
 
 /* View publication */
@@ -51,6 +56,7 @@
     }
   }
 }
+
 /* End of view publication */
 
 .publication-image {
