--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -39,7 +39,8 @@
 
                 <div class="row no-margin-bottom">
                     <p class="no-margin-bottom">
-                        <a href="{{getPublPdfUrlFromId publication.pdfId}}" target="_blank">{{_ "bookExample"}}</a>
+                        <a href="{{getPublPdfUrlFromId publication.pdfId}}"
+                           target="_blank">{{_ "bookPdf"}}</a>
                     </p>
                 </div>
 
