--- a/client/layouts/main/main-layout.html
+++ b/client/layouts/main/main-layout.html
@@ -5,7 +5,9 @@
         </div>
         <div class="row">
             <div class="col s12 l10">
-                {{> Template.dynamic template=content}}
+                <div class="container">
+                    {{> Template.dynamic template=content}}
+                </div>
             </div>
             <div class="col l2 hide-on-med-and-down">
                 right news
