--- a/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
+++ b/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
@@ -27,7 +27,8 @@
 
             <div class="row no-margin-bottom">
                 <p class="no-margin-bottom">
-                    <a href="{{getPublPdfUrlFromId publication.pdfId}}" target="_blank">{{_ "bookExample"}}</a>
+                    <a class="underline-hover" href="{{getPublPdfUrlFromId publication.pdfId}}"
+                       target="_blank">{{_ "bookPdf"}}</a>
                 </p>
             </div>
 
