some changes in create-edit-publ, publ-view

--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -64,9 +64,11 @@
                 <div class="row">
                     <h4 class="center-align">{{_ "bookContent"}}</h4>
 
-                    <p>
-                        {{publication.content}}
-                    </p>
+                    {{#each contentLines}}
+                        <p>
+                            {{this}}
+                        </p>
+                    {{/each}}
                 </div>
 
                 <div class="row">
