--- a/client/views/publications/common/create-edit-publication/add-author/add-author.html
+++ b/client/views/publications/common/create-edit-publication/add-author/add-author.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="input-field col s12">
             <select id="author">
-                <option disabled selected>{{_ "chooseAuthor"}}</option>
+                <option value="def" disabled selected>{{_ "chooseAuthor"}}</option>
                 {{#each allAuthors}}
                     <option value="{{_id}}">{{name}}</option>
                 {{/each}}
