--- a/client/views/bucket-main-view/bucket/bucket.html
+++ b/client/views/bucket-main-view/bucket/bucket.html
@@ -9,12 +9,14 @@
             {{#if arrayHasDocuments bucketItems}}
                 <div class="col s8">
                     <div class="row bucket-items-list">
-                        {{#each bucketItems}}
-                            {{> bucketListItem bucketItem=this}}
-                        {{/each}}
+                        <ul class="collection">
+                            {{#each bucketItems}}
+                                {{> bucketListItem bucketItem=this}}
+                            {{/each}}
+                        </ul>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s3 offset-s1">
                     <div class="row">
                         <div class="row">
                             <p>{{_ "totalBucket"}}: {{totalBucketPrice}}</p>
