--- a/client/views/orders/orders-list-main-view/orders-list/orders-list.html
+++ b/client/views/orders/orders-list-main-view/orders-list/orders-list.html
@@ -1,5 +1,9 @@
 <template name="ordersList">
-    {{#each orders}}
-        {{placedAt}}
-    {{/each}}
+    <div class="">
+        {{#each orders}}
+            {{>orderListItem
+            order=this
+            }}
+        {{/each}}
+    </div>
 </template>
