--- a/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
+++ b/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
@@ -1,7 +1,7 @@
 <template name="publicationListItem">
     <div class="row list-item">
         <div class="col s3 publication-image-wrapper">
-            <img class="publication-image" src="{{getPublImageUrlFromId publication.imageId}}">
+            <img class="publication-image" src="{{getPhotoUrlById publication.imageId}}">
         </div>
         <div class="col s9">
 
