--- a/client/views/bucket-main-view/bucket/bucket.html
+++ b/client/views/bucket-main-view/bucket/bucket.html
@@ -19,7 +19,7 @@
                 <div class="col s3 offset-s1">
                     <div class="row">
                         <div class="row">
-                            <p>{{_ "totalBucket"}}: {{totalBucketPrice}}</p>
+                            <p>{{_ "totalBucket"}}: {{roundPrice totalBucketPrice}}</p>
                         </div>
 
                         <div class="row">
