improve subscription for orders; something else...

--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -105,7 +105,7 @@
                 </div>
                 {{#if imageBase64}}
                     <div class="col s2">
-                        <img src="{{imageBase64}}" class="image-preview">
+                        <img src="{{imageBase64}}" class="materialboxed image-preview">
                     </div>
                 {{/if}}
             </div>
