--- a/client/views/orders/order-view-main-view/order-view/order-view.html
+++ b/client/views/orders/order-view-main-view/order-view/order-view.html
@@ -1,32 +1,64 @@
 <template name="orderView">
-    <h4>{{_ "order"}} №{{order.orderNumber}}, {{formatDate order.placedAt "DD.MM.YYYY HH:mm"}}</h4>
+    <div class="row">
+        <div class="row center-align">
+            <h4>{{_ "order"}} №{{order.orderNumber}}, {{formatDate order.placedAt "DD.MM.YYYY HH:mm"}}</h4>
+        </div>
 
-    <p>{{_ "totalPrice"}}: {{roundPrice order.totalPrice}}</p>
+        <div class="row">
+            <div class="col s6">
+                <div class="row">
+                    <p>{{_ "totalPrice"}}: {{roundPrice order.totalPrice}}</p>
+                </div>
+                <div class="row">
+                    <p>{{_ "orderStatus"}}: {{_ order.status}}</p>
+                    {{#if order.checkImageId}}
+                        <a id="check-image" class="pointer underline-hover" target="_blank"
+                           href="{{getPhotoUrlById order.checkImageId}}">{{_ "checkPhoto"}}</a>
+                        {{#if equal order.status "placed"}}
+                            <i class="delete-image pointer material-icons">delete</i>
+                        {{/if}}
+                    {{/if}}
+                </div>
+                <div class="row">
+                    <p>{{_ "deliveryInfo"}}:</p>
 
-    <p>{{_ "orderStatus"}}: {{_ order.status}}</p>
+                    <p>{{order.deliveryInfo.name}}</p>
 
-    {{#if order.checkImageId}}
-        <a id="check-image" class="pointer underline-hover" target="_blank"
-           href="{{getPhotoUrlById order.checkImageId}}">{{_ "checkPhoto"}}</a>
-        {{#if equal order.status "placed"}}
-            <i class="delete-image pointer material-icons">delete</i>
-        {{/if}}
-    {{/if}}
+                    <p>{{order.deliveryInfo.email}}</p>
 
-    <p>{{_ "orderContent"}}:</p>
-    <ol>
-        {{#each order.items}}
-            {{#with orderItem id}}
-                <li><a id="{{_id}}"
-                       class="pointer underline-hover">{{title}} x {{../amount}}</a></li>
-            {{/with}}
-        {{/each}}
-    </ol>
+                    <p>{{order.deliveryInfo.address}}</p>
+                </div>
+                <div class="row">
+                    <a class="payment-info underline-hover pointer">{{_ "paymentInfo"}}</a>
+                </div>
+            </div>
 
-    {{#if equal order.status "placed"}}
-        <a class="attach-check-button btn">{{_ "attachCheck"}}</a>
-    {{/if}}
-    {{#if isAdmin}}
-        <a class="confirm-paid-button btn">{{_ "confirmPaid"}}</a>
-    {{/if}}
+            <div class="col s6">
+                <div class="row">
+                    <ul class="collection">
+                        {{#each order.items}}
+                            {{#with orderItem id}}
+                                <li class="collection-item avatar">
+                                    <img src="{{getPhotoUrlById imageId}}" class="circle">
+                                    <span id="{{_id}}" class="title
+                                        underline-hover pointer">{{title}}</span>
+
+                                    <p>{{../amount}} {{_ "items"}}</p>
+                                </li>
+                            {{/with}}
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            {{#if equal order.status "placed"}}
+                <a class="attach-check-button btn">{{_ "attachCheck"}}</a>
+            {{/if}}
+            {{#if isAdmin}}
+                <a class="confirm-paid-button btn">{{_ "confirmPaid"}}</a>
+            {{/if}}
+        </div>
+    </div>
 </template>
