--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -2,7 +2,7 @@
     <div class="row view-publication-wrapper">
         <div class="row">
             <div class="col s3">
-                <img class="publication-image" src="{{getPhotoUrlById publication.imageId}}">
+                <img class="materialboxed publication-image" src="{{getPhotoUrlById publication.imageId}}">
             </div>
             <div class="col s9">
                 {{#if canUser "editPublication"}}
