--- a/client/views/bucket-main-view/bucket-main-view.html
+++ b/client/views/bucket-main-view/bucket-main-view.html
@@ -1,3 +1,6 @@
 <template name="bucketMainView">
-        {{> bucket bucketItems=bucketItems}}
+    {{> bucket
+    bucketItems=bucketItems
+    reloadItemsFromTheBucket=reloadItemsFromTheBucketCb
+    }}
 </template>
