store images and pdf on dropbox

--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -40,7 +40,7 @@
                 <div class="row no-margin-bottom">
                     <p class="no-margin-bottom">
                         <a href="{{getPublPdfUrlFromId publication.pdfId}}"
-                           target="_blank">{{_ "bookPdf"}}</a>
+                           target="_blank" download>{{_ "bookPdf"}}</a>
                     </p>
                 </div>
 
