if img or pdf was changed after edit, remove old files

--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -40,7 +40,9 @@
                 <div class="row no-margin-bottom">
                     <p class="no-margin-bottom">
                         <a href="{{getPublPdfUrlFromId publication.pdfId}}"
-                           target="_blank" download>{{_ "bookPdf"}}</a>
+                           target="_blank">{{_ "bookPdfView"}}</a>
+                        (<a href="{{getPublPdfUrlFromId publication.pdfId}}"
+                           target="_blank" download>{{_ "bookPdfDownload"}}</a>)
                     </p>
                 </div>
 
