possibility to create/edit checkout credentials

--- a/server/handlebars-templates/payment-template.handlebars
+++ b/server/handlebars-templates/payment-template.handlebars
@@ -1,13 +1,13 @@
 <div>
-    <p>р/р 31251209208829</p>
+    <p>р/р {{account}}</p>
 
-    <p>МФО 820172</p>
+    <p>МФО {{mfo}}</p>
 
-    <p>код 05408102</p>
+    <p>код {{code}}</p>
 
-    <p>Банк: ГУДКСУ в Тернопільській області.</p>
+    <p>Банк: {{bank}}.</p>
 
-    <p>Отримувач: ТНТУ ім. І.Пулюя</p>
+    <p>Отримувач: {{receiver}}</p>
 
     <p>Призначення платежу:</p>
     {{#if itemsAmount}}
